test/error/iface/err4.rzy
component
  Sub
    output
      funcA();
      funcB();
      
  implementation elementary
  end

  Err4
    output
      funcA();
      funcB();
      funcC();
      
  implementation composition
    
    component
      a : Sub;

    connection
      a.funcA -> funcA;
      a.funcB -> funcB;
      a.funcC -> funcC;
    
  end

